<resources>
    <string name="loading">努力加载中，请稍等...</string>
    <string name="guide_skip">跳过</string>
    <string name="app_name">SLOW</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">取消</string>
    <string name="comit">确定</string>
    <string name="alert_no_button">取&#160;&#160;消</string>
    <string name="alert_confirm2">确&#160;&#160;认</string>
    <string name="provice_city_eare">省 / 市 / 区</string>
    <string name="city">城市</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">没有了</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="sellcar_delete">删除</string>
    <string name="sellcar_edit">编辑</string>
    <string name="sellcar_selled">已出售</string>
    <string name="sellcar_online">上架</string>
    <string name="sellcar_order">已预订</string>
    <string name="sellcar_delete_cacel">取消</string>
    <string name="sellcar_delete_comit">确定</string>
    <string name="sellcar_delete_message">此操作会删除车源所有信息,是否确定删除?</string>
    <string name="sellcar_edit_message">此操作会暂时将您的车辆下架,编辑后的车辆信息需要重新审核才能继续出售。是否确认此操作?</string>
    <string name="sellcar_selled_message">此操作会彻底将您的车辆从平台下架,并无法再次上架，是否确认此操作?</string>
    <string name="sellcar_online_message">此操作会继续在平台上出售您的车辆,是否确认操作?</string>
    <string name="sellcar_order_message">此操作会将您的车辆标记为已预订，其他用户将无法与您取得联系。7天后若无其他操作，将默认您的车辆已售出，是否确认此操作？</string>
    <string name="user">个人中心</string>
    <string name="teshufu_arrows">➥</string>
    <string name="ad_ignore">点击跳过</string>
    <string name="rbm">¥</string>
    <string name="rbm_unit">万</string>
    <string name="usedCar_hotList">热门车型</string>
    <string name="usedCar_hotBrand">热门品牌</string>
    <string name="usedCar_searchHistory">搜索历史</string>
    <string name="usedCar_clearHistory">清空历史</string>
    <string name="base_bottom_1">健康</string>
    <string name="base_bottom_2">子女</string>
    <string name="base_bottom_3">兴趣</string>
    <string name="base_bottom_5">个人中心</string>
    <string name="base_bottom_4">消息</string>
    <string name="only_can_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>
    <string name="buyCar_choose_city">城市</string>
    <string name="buyCar_hostCity">热门城市</string>
    <string name="buyCar_choose_brand">品牌</string>
    <string name="buyCar_choose_price">价格</string>
    <string name="buyCar_choose_more">更多</string>
    <string name="title_usedCar_buyCar_search">品牌/型号/厂商</string>
    <string name="title_usedCar_buyCar_city_search">城市名、拼音、首字母</string>
    <string name="city_history">历史访问城市</string>
    <string name="searchCity_history">搜索历史</string>
    <string name="searchCity_clearHistory">清除搜索记录</string>
    <string name="price_ok">确定</string>
    <string name="price_unit">价格/单位：</string>
    <string name="price_limit_min">6</string>
    <string name="price_limit_max">不限</string>
    <string name="search_cancel">取消</string>
    <string name="more_commit">确认</string>
    <string name="more_reset">重置</string>
    <string name="hot_brand">热门品牌</string>
    <string name="location">定位中...</string>
    <string name="my_location">当前定位城市</string>
    <string name="no_content">抱歉  Sorry！~</string>
    <string name="no_content_refresh">刷新重试</string>
    <string name="no_collection">没有收藏的车辆~</string>
    <string name="no_buy">没有购买的车辆~</string>
    <string name="no_history">没有历史记录~</string>
    <string name="add_car">添加我的车辆</string>
    <string name="add_car_new">我的车辆</string>
    <string name="add_car_btn_bottom">添加查询车辆</string>
    <string name="add_car_discription">添加车辆后，快速查询您的车辆违章情况</string>
    <string name="add_car_discription_new">添加后，快速进行违章查缴</string>
    <string name="introduce_of_peccancy">了解违章服务 ？</string>
    <string name="manage_car">管理车辆</string>
    <string name="peccancy_payment">违章缴费</string>
    <string name="peccancy_info">违章信息</string>
    <string name="peccancy_user_info">车主信息</string>
    <string name="peccancy_add_car">添加新车辆</string>
    <string name="peccancy_order">违章订单</string>
    <string name="peccancy_order_state">当前状态</string>
    <string name="peccancy_order_place">违章地点</string>
    <string name="peccancy_order_content">违章内容</string>
    <string name="peccancy_order_time">违章时间</string>
    <string name="peccancy_order_deduct_marks">扣分情况</string>
    <string name="peccancy_order_fine_amount">罚款金额</string>
    <string name="peccancy_order_service_fee">服务费</string>
    <string name="peccancy_pay_info">支付信息</string>
    <string name="peccancy_order_fee">缴费订单</string>
    <string name="no_peccancy_data">恭喜 ！ 您的车辆暂时没有违章记录</string>
    <string name="car_licence">车牌号码</string>
    <string name="car_brand">品牌车型</string>
    <string name="drive_city">行驶城市</string>
    <string name="safe_date">车险到期</string>
    <string name="please_choose">请选择</string>
    <string name="car_licence_hint">请输入车牌号码</string>
    <string name="engine_number">发动机号码</string>
    <string name="engine_number_hint">请输入完整发动机号</string>
    <string name="car_frame">车辆识别代号</string>
    <string name="car_frame_hint">请输入完整车架号</string>
    <string name="add_car_introduce">您填写的信息仅用于车辆违章查询服务，智慧汽车严格遵守保密制度与隐私协议，保障用户隐私安全</string>
    <string name="save_and_inquiry">保存并查询</string>
    <string name="save_only">保存</string>
    <string name="agree_peccancy_agreement">已阅读并同意《智慧汽车网违章查缴服务协议》</string>
    <string name="peccancy_payment_order_name">便于办理违章缴费，请填写真实姓名</string>
    <string name="peccancy_payment_order_phone">便于办理违章缴费，请填写真实电话</string>
    <string name="peccancy_payable">可缴费的违章</string>
    <string name="peccancy_pay_unable">不可缴费的违章</string>
    <string name="peccancy_pay_unable_instruction">暂不支持缴费的违章（有扣分，未知扣分，未知罚款，0元0分，火车站/机场违章，部分高速违章，部分外地违章）</string>
    <string name="other_cause">其他原因</string>
    <string name="peccancy_order_submit">确认提交</string>
    <string name="peccancy_car_fine">罚款</string>
    <string name="peccancy_car_deduct_marks">扣分</string>
    <string name="order_info">订单信息</string>
    <string name="peccancy_fine">违章罚款</string>
    <string name="total_price">总价</string>
    <string name="preferential_info">优惠信息</string>
    <string name="pay_amount">实付金额</string>
    <string name="peccancy_payment_instruction">"1、罚金金额或其他信息输入错误可能造成办理失败\n2、罚单代缴订单会在2个工作日内办理完成\n3、办理失败的罚金及服务费将会在2-3个工作日内退回到您的支付账号中\n4、缴费过程中使用的优惠券也会同步返还到您的账号内"</string>
    <string name="peccancy_pay_preferential">满120减10</string>
    <string name="peccancy_state">"1、由于各城市车管所具体情况不同，可能出现部分违章缴费办理失败\n2、违章代缴订单会在7个工作日内办理完成\n3、办理失败的违章缴费罚金及服务费将会在2-3个工作日内退回到您的支付账号中\n4、缴费过程中使用的优惠券也会同步返还到您的账号内"</string>
    <string name="city_location">当前定位城市</string>
    <string name="city_location_loading">正在定位中...</string>
    <string name="photo_upload_demand">照片上传要求</string>
    <string name="photo_upload_demand_content">1）车辆标准照建议14张，其中外观照7张、内饰照6张、发动机舱照1张；\n2）所拍摄照片内容须真实。\n3）所拍摄角度须完全展现被拍车辆或区域（外观拍摄时建议距离车辆1-1.5米；车门、车盖呈关闭状态；车辆周围无遮挡影响车辆展现）。\n4）所拍摄照片须清晰（禁止使用电子或纸制照片进行翻拍）。\n5）所拍摄照片中车牌号部位遮挡处理尽可能规则涂抹或遮挡。\n6）如上传图片质量较差，车辆可能无法得到认证并发布。</string>
    <string name="tip_take_photo">Take photo</string>
    <string name="folder_all">所有图片</string>
    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">超出上传限制，最多上传18张</string>
    <string name="action_done">完成</string>
    <string name="photo_unit">Shot</string>
    <string name="want_sell_car">我要卖车</string>
    <string name="sell_car_step">卖车流程</string>
    <string name="sell_car_step1">上传照片</string>
    <string name="sell_car_step2">基本信息</string>
    <string name="sell_car_step3">填写简介</string>
    <string name="sell_car_free_tittle">帮您卖车</string>
    <string name="sell_car_free_content">无中间环节，买卖双方自主交易</string>
    <string name="sell_car_free_button">免费卖车</string>
    <string name="sell_car_suggest_add_photo">上传建议角度的照片，成交率会提高哦！</string>
    <string name="sell_car_suggest_broswer_photo">点击缩略图,可以预览照片,长按可设为封面！</string>
    <string name="sell_car_next_step">下一步</string>
    <string name="sell_car_next_step_in">Next</string>
    <string name="sell_car_sugget_photo_count">建议上传照片的角度(最多不能超过18张)</string>
    <string name="take_photo">进入拍照</string>
    <string name="choose_photo">相册选取</string>
    <string name="photo_paint">图片编辑</string>
    <string name="edit">编辑</string>
    <string name="upload_if_need_paint">您可以对照片进行涂抹和裁剪等编辑,是否需要编辑?</string>
    <string name="upload_need_paint">需要</string>
    <string name="upload_no_need_paint">不需要</string>
    <string name="album_initialize">相册初始化</string>
    <string name="album_wait">请稍后</string>
    <string name="car_intro">基本信息</string>
    <string name="car_intro_hint_content">描述您的车辆信息，最多500字</string>
    <string name="car_intro_text_count">0/500字</string>
    <string name="car_issue_right_now">马上发布</string>
    <string name="car_photo_set_first">设为封面</string>
    <string name="car_photo_delete">删除</string>
    <string name="weixin_payment">微信支付</string>
    <string name="weixin_payment_introduce">操作简单易用，支持大额支付</string>
    <string name="zhifubao_payment">支付宝支付</string>
    <string name="zhifubao_payment_introduce">推荐支付宝用户使用</string>
    <string name="car_basic_info">车辆基本信息</string>
    <string name="car_basic_info_more_detail">填写更多车辆信息，提高出售成功率</string>
    <string name="car_you_contact">联系方式</string>
    <string name="car_must_fill">(必填)</string>
    <string name="car_choose_please">请选择&#160;&#160;</string>
    <string name="car_insert_please">请输入&#160;&#160;</string>
    <string name="car_insert_please_right">请输入</string>
    <string name="car_name_brand">车辆名称</string>
    <string name="car_registration_data">上牌时间</string>
    <string name="car_location">牌照所在地</string>
    <string name="car_location_meet">看车地点</string>
    <string name="car_total_kilometres">行驶里程</string>
    <string name="car_ten_thousand_kilometres">万公里</string>
    <string name="car_color">车身颜色</string>
    <string name="car_gearbox">变速箱</string>
    <string name="car_pay_insurance">交强险</string>
    <string name="car_gearbox_hand">&#160;&#160;&#160;&#160;手动&#160;&#160;&#160;&#160;</string>
    <string name="car_gearbox_auto">&#160;&#160;&#160;&#160;自动&#160;&#160;&#160;&#160;</string>
    <string name="car_gearbox_hand_and_auto">手自一体</string>
    <string name="car_pay_insurance_no">&#160;&#160;&#160;&#160;&#160;&#160;无&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="car_pay_insurance_yes">&#160;&#160;&#160;&#160;&#160;&#160;有&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="car_maintenance_no">&#160;&#160;&#160;&#160;&#160;&#160;无&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="car_maintenance_4s">4S定期</string>
    <string name="car_maintenance_no_4s">非4S定期</string>
    <string name="car_Price_of_Presell">预售价</string>
    <string name="car_ten_thousand_yuan">万元</string>
    <string name="car_transfer_count">过户次数</string>
    <string name="car_transfer_count_unit">次</string>
    <string name="car_include_transfer_fee">含过户费</string>
    <string name="car_licence_if">是否上牌</string>
    <string name="car_insurance_deadline">保险到期时间</string>
    <string name="car_annual_inspection_deadline">年检到期时间</string>
    <string name="car_use_license_location">牌照所在地</string>
    <string name="car_periodic_maintenance">保养情况</string>
    <string name="car_linkman_host">联系人</string>
    <string name="car_linkman_host_tel">联系号码</string>
    <string name="car_year">年</string>
</resources>