<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llayout_show_photo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg" >


    <ScrollView
        android:id="@+id/scv_up_load_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_tb10"
        android:layout_marginBottom="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_photo_text"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_suggest_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell_car_suggest_add_photo" />

            <com.indulge.freedom.who.view.NoScrollGridView
                android:id="@+id/gridView_show_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:horizontalSpacing="7.5dip"
                android:numColumns="3"
                android:verticalSpacing="7.5dip" />

            <Button
                android:layout_marginTop="@dimen/height_or_width_60dp"
                android:id="@+id/btn_next_step1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_16dp"
                android:text="@string/sell_car_next_step"
                android:textColor="@color/black"
                android:textSize="16sp" />
            
            <TextView 
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo_upload_demand"
                android:textColor="@color/black"
                android:textSize="14sp"
                />
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo_upload_demand_content"
                android:textColor="@color/gray"
                android:textSize="12sp"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>