<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv_current_of_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_16"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_18_size" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_preview_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_bottom" />

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/padding_8dp"
        android:paddingTop="@dimen/padding_8dp" >

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_16"
            android:paddingLeft="@dimen/padding_16dp"
            android:paddingRight="@dimen/padding_16dp"
            android:paddingTop="@dimen/padding_8dp"
            android:paddingBottom="@dimen/padding_8dp"
            android:text="@string/edit"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_set_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:paddingLeft="@dimen/padding_16dp"
            android:paddingRight="@dimen/padding_16dp"
            android:paddingTop="@dimen/padding_8dp"
            android:paddingBottom="@dimen/padding_8dp"
            android:text="@string/car_photo_set_first"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_toLeftOf="@id/btn_set_first"
            android:paddingLeft="@dimen/padding_16dp"
            android:paddingRight="@dimen/padding_16dp"
            android:paddingTop="@dimen/padding_8dp"
            android:paddingBottom="@dimen/padding_8dp"
            android:text="@string/car_photo_delete"
            android:textColor="@color/black" />
    </RelativeLayout>

</RelativeLayout>