<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abc_switch_track_mtrl_alpha"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_horizontalscrollview_item_top8"
        android:text="@string/sell_car_sugget_photo_count"
        android:textColor="@color/black"
        android:textSize="@dimen/activity_14_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:weightSum="2" >

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="horizontal"-->
            <!--android:weightSum="3" >-->

            <!--<ImageView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="@dimen/margin_2"-->
                <!--android:layout_weight="1"-->
                <!--android:contentDescription="@null"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:src="@drawable/publish1" />-->

            <!--<ImageView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="@dimen/margin_2"-->
                <!--android:layout_weight="1"-->
                <!--android:contentDescription="@null"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:src="@drawable/publish2" />-->

            <!--<ImageView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="@dimen/margin_2"-->
                <!--android:layout_weight="1"-->
                <!--android:contentDescription="@null"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:src="@drawable/publish3" />-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="horizontal" >-->

            <!--<ImageView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="@dimen/margin_2"-->
                <!--android:layout_weight="1"-->
                <!--android:contentDescription="@null"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:src="@drawable/publish4" />-->

            <!--<ImageView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="@dimen/margin_2"-->
                <!--android:layout_weight="1"-->
                <!--android:contentDescription="@null"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:src="@drawable/publish5" />-->

            <!--<ImageView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="@dimen/margin_2"-->
                <!--android:layout_weight="1"-->
                <!--android:contentDescription="@null"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:src="@drawable/publish6" />-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:orientation="horizontal" >-->

            <!--<ImageView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="@dimen/margin_2"-->
                <!--android:layout_weight="1"-->
                <!--android:contentDescription="@null"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:src="@drawable/publish7" />-->

            <!--<ImageView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="@dimen/margin_2"-->
                <!--android:layout_weight="1"-->
                <!--android:contentDescription="@null"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:src="@drawable/publish8" />-->

            <!--<ImageView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="@dimen/margin_2"-->
                <!--android:layout_weight="1"-->
                <!--android:contentDescription="@null"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:src="@drawable/publish9" />-->
        <!--</LinearLayout>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_photo_text"
        android:gravity="center"
        android:weightSum="2" >

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnNextStep"
            android:text="@string/take_photo"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_photo_text"
        android:layout_marginBottom="@dimen/margin_photo_text"
        android:gravity="center"
        android:weightSum="2" >

        <Button
            android:id="@+id/btn_choose_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnNextStep"
            android:text="@string/choose_photo"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llayout_bg_gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_bg"
        android:orientation="horizontal" />

</LinearLayout>